# C-Programs

./: README.md
Old ones/: ASCII.c  CG_Puzzle.c  CMakeLists.txt  add.c  armstrong.c  armstrong_series.c  automorphic.c  char_print.c  egg.c  even_number25.c  fibonacci.c  gatequestion.c  gh1.c  harsha.c  ilam_cat1_oops.c  ilamcat2.c  labfat.c  low_up_num.c  manisha.c  matrix_90_anticlock.c  matrixadd.c  menu.c  mergesort.c  node_creation.c  odd_number.c  pointer.c  prepost.c  prime25.c  recs.c  reverse_num.c  reverse_of_odd_nos_in_array_recursion.c  sample.c  sizeof.c  small_large_array.c  strings_with_space.c  structure_prblm.c  sum_of_digits.c  sum_of_first_row_matrix.c  sum_product.c  swap.c  (+3 more)
